feat: create cart page

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -115,6 +115,10 @@ a {
     background-color: #0000000D !important;
 }
 
+ul {
+    list-style-type: none;
+  }
+
 /* MEDIA SCREEN */
 
 @media screen and (max-width: 995px) {
