--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,142 +1,194 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
-    font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .w-size {
-    width: 200px;
+  width: 200px;
 }
 
 a {
-    color: #000;
-    text-decoration: none;
+  color: #000;
+  text-decoration: none;
 }
 
 .footer-link a {
-    margin: 0 24px;
+  margin: 0 24px;
 }
 
 .align-footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 75px;
-}
-
-.btn-group {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 75px;
 }
 
 .items {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 12px;
 }
 
 .btn {
-    border-radius: 0px;
+  border-radius: 0px;
 }
 
 .btn-option {
-    background-color: #F3F3F3;
-    color: #4A4B4D;
+  background-color: #f3f3f3;
+  color: #4a4b4d;
 }
 
 .btn-option:hover {
-    background-color: #b0b0b0;
-    color: #F3F3F3;
+  background-color: #b0b0b0;
+  color: #f3f3f3;
 }
 
 .btn-selected {
-    background-color: #004197; 
-    color: #FFFFFF;
-    border: #004197; 
+  background-color: #004197;
+  color: #ffffff;
+  border: #004197;
 }
 
 .btn-selected:hover {
-    background-color: #004197; 
-    color: #FFFFFF;
-    border: #004197; 
+  background-color: #004197;
+  color: #ffffff;
+  border: #004197;
 }
 
 .btn-cart {
-    background-color: #004197; 
-    color: #FFFFFF;
-    border: #004197; 
-    width: 100%;
-    padding: 6px;
+  background-color: #004197;
+  color: #ffffff;
+  border: #004197;
+  width: 100%;
+  padding: 6px;
 }
 
 .card {
-    width: 300px;
+  width: 300px;
 }
 
-
 .card img {
-    height: 400px;
-    object-fit: cover;
-    max-width: 100%;
-    width: 300px;
+  height: 400px;
+  object-fit: cover;
+  max-width: 100%;
+  width: 300px;
 }
 
 .img-detail {
-    height: 515px;
-    object-fit: cover;
-    max-width: 100%;
-    width: 515px;
+  height: 515px;
+  object-fit: cover;
+  max-width: 100%;
+  width: 515px;
+}
+
+.list-img-cart {
+  height: 175px;
+  object-fit: cover;
+  max-width: 100%;
+  width: 175px;
 }
 
 .title {
-    font-size: 28px;
-    font-weight: bold;
+  font-size: 28px;
+  font-weight: bold;
 }
 
 .price {
-    font-size: 25px;
-    font-weight: bold;
-    color: #E2342D;
+  font-size: 25px;
+  font-weight: bold;
+  color: #e2342d;
+}
+
+.discount {
+  font-size: 16px;
+  text-decoration: line-through;
+  color: #e2342d;
+  margin-bottom: 0;
 }
 
 .title-description {
-    font-size: 25px;
+  font-size: 25px;
+}
+
+.title-name {
+  font-size: 20px;
 }
 
 .description {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 .dropdown-menu {
-    border-radius: 0;
+  border-radius: 0;
 }
 
 .bg-body-footer {
-    background-color: #0000000D !important;
+  background-color: #0000000d !important;
 }
 
 ul {
-    list-style-type: none;
-  }
+  list-style-type: none;
+  padding: 0px;
+}
+
+.fa-trash {
+  color: #de3838;
+}
+
+.price-badge {
+  background-color: #e2342d;
+  color: white;
+  padding: 8px 16px;
+  text-align: center;
+  position: absolute;
+  border-radius: 0px;
+  left: 210px;
+}
+
+.shopping-badge {
+  background-color: #e2342d;
+  color: white;
+  padding: 8px 16px;
+  text-align: center;
+  position: absolute;
+  border-radius: 0px;
+  left: 210px;
+}
 
 /* MEDIA SCREEN */
 
 @media screen and (max-width: 995px) {
-    .col-description {
-        margin: 18px 0;
-    }
+  .col-description {
+    margin: 18px 0;
+  }
 }
 
 @media screen and (max-width: 765px) {
-    .align-footer {
-        flex-direction: column-reverse;
-    }
+  .align-footer {
+    flex-direction: column-reverse;
+  }
+
+  .list-img-cart {
+    height: 100%;
+    width: 100%;
+  }
+
+  .info-card {
+    padding-top: 12px !important;
+    padding-bottom: 12px !important;
+  }
+
+  .items {
+    flex-direction: column;
+  }
 }
 
-@media screen and (max-width: 490px){
-    .footer-link a {
-        margin: 0 16px;
-    }
+@media screen and (max-width: 490px) {
+  .footer-link a {
+    margin: 0 16px;
+  }
 }
 
 /*
